--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="media.css"/>
   </head>
   <body>
     <!-- top banner -->
@@ -31,7 +32,10 @@
             <li><a class="nav-link secondary-button" href="#">Sign up</a></li>
           </ul>
         </div>
+        <a href="#" class="nav-toggle"></a>
+        <i class="fa-solid fa-bars"></i>
       </div>
+      
     </nav>
     <header>
       <div class="container flex header-section">
