--- a/index.html
+++ b/index.html
@@ -148,8 +148,8 @@
       </div>
     </section>
 
-    <section class="big-features-section">
-      <div class="container flex big-feature-container">
+    <section class="big-features-section" >
+      <div class="container flex big-feature-container" id="spl-cnt">
         <div class="feature-desc flex">
           <h4>Effortless validation for</h4>
           <h3>Design professionals</h3>
